    assert_equal 'user@example.com', cookies[:email]

  To clear the cookies, use clear, e.g:

    cookies.clear
    get :index
    assert_nil cookies[:email]

  We now no longer write out HTTP_COOKIE and the cookie jar is
  persistent between requests so if you need to manipulate the environment
  for your test you need to do it before the cookie jar is created.


*Rails 3.1.1 (unreleased)*

* Fixed AssetNotPrecompiled error raised when rake assets:precompile is compiling certain .erb files. [Guillermo Iguaran]

* Manifest is correctly placed in assets path when default assets prefix is changed. [Guillermo Iguaran]

* Fixed stylesheet_link_tag and javascript_include_tag to respect additional options passed by the users when debug is on. [Guillermo Iguaran]


*Rails 3.1.0 (August 30, 2011)*

* Param values are `paramified` in controller tests. [David Chelimsky]

* x_sendfile_header now defaults to nil and config/environments/production.rb doesn't set a particular value for it. This allows servers to set it through X-Sendfile-Type. [Santiago Pastorino]

* The submit form helper does not generate an id "object_name_id" anymore. [fbrusatti]

* Make sure respond_with with :js tries to render a template in all cases [José Valim]

* json_escape will now return a SafeBuffer string if it receives SafeBuffer string [tenderlove]

* Make sure escape_js returns SafeBuffer string if it receives SafeBuffer string [Prem Sichanugrist]

* Fix escape_js to work correctly with the new SafeBuffer restriction [Paul Gallagher]

* Brought back alternative convention for namespaced models in i18n [thoefer]

  Now the key can be either "namespace.model" or "namespace/model" until further deprecation.

* It is prohibited to perform a in-place SafeBuffer mutation [tenderlove]

  The old behavior of SafeBuffer allowed you to mutate string in place via
  method like `sub!`. These methods can add unsafe strings to a safe buffer,
  and the safe buffer will continue to be marked as safe.
